Set nav links in fixed-header to position absolute and align right

--- a/style.css
+++ b/style.css
@@ -108,7 +108,11 @@ nav ul li {
   overflow: hidden;
   width: 100vw;
 }
-
+.fixed-header nav a {
+  position: absolute;
+  right: 0;
+  
+}
 nav a {
   text-decoration: none;
   color: white;
